[package]
name = "mc-serial"
version = "0.1.0"
authors = ["MobileCoin"]
# See https://crates.io/category_slugs for valid categories
categories = ["no-std"]
description = "Basic wrappers for prost and serde serialization."
edition = "2021"
# See https://crates.io/keywords for the common keywords
keywords = ["serialization", "utility"]
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/mobilecoinfoundation/serial"
rust-version = "1.67.1"

[profile.release]
lto = "thin"

[package.metadata.release]
shared-version = true
dev-version-ext = "beta.0"
consolidate-commits = true
consolidate-pushes = true
tag-name = "v{{version}}"

# The file names in this key are relative to the each crate that gets released.
# So we only need one `README.md` entry if all the README's follow a
# common format and are always next to the Cargo.toml for their respective
# package.
pre-release-replacements = [
    { file = "README.md", search = "mc-[a-z-]+/[0-9.]+", replace = "{{crate_name}}/{{version}}" },
]

[features]
std = ["serde/std", "ciborium/std"]
test_utils = ["dep:protobuf"]
jsonu64 = ["std", "dep:serde_with"]

[dependencies]
prost = { version = "0.11", default-features = false, features = [
    "prost-derive",
] }
protobuf = { version = "2.27", optional = true }
serde = { version = "1.0", default-features = false, features = [
    "alloc",
    "derive",
] }
serde_with = { version = "2.0", default-features = false, features = [
    "macros",
], optional = true }

# These dependencies locked because the interaction between cibiorum and ciborium-io is garbage.
# 
# cibiorum::ser::into_writer(&Vec<u8>) is infallible, but only because of how cibiorum-io is
# implemented, in version 0.2.0, when the alloc feature (which is not exposed by ciborium) is
# enabled.
#
# If you are considering using serde for any reason, consider the choices you have made in your
# life, and then use protobufs (via prost) instead.
ciborium = { version = "=0.2.0", default-features = false }
ciborium-io = { version = "=0.2.0", default-features = false, features = [
    "alloc",
] }

[dev-dependencies]
serde_json = "1.0"
